--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,7 +9393,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -9401,9 +9401,15 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>970 357 924 485 0 0 1920 1058 </string>
+	<string>314 226 924 485 0 0 1280 777 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>931 621 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1938 211 1525 824 1920 -120 1920 1178 </string>
+	<string>50 65 625 712 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>79 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9418,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.19370138645172119</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.15575926005840302</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.14145714044570923</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.10840655118227005</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.81926977634429932</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.38298487663269043</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.35665956139564514</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.27671992778778076</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38154411315917969</real>
+				<real>0.43850564956665039</real>
 				<key>Green Component</key>
-				<real>0.83635991811752319</real>
+				<real>0.40717673301696777</real>
 				<key>Red Component</key>
-				<real>0.87748134136199951</real>
+				<real>0.32436618208885193</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.51685798168182373</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.50962930917739868</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.44058024883270264</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.72908437252044678</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.33896297216415405</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.34798634052276611</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.56363654136657715</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.56485837697982788</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.50599193572998047</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9359474778175354</real>
+				<real>0.86405980587005615</real>
 				<key>Green Component</key>
-				<real>0.96549534797668457</real>
+				<real>0.95794391632080078</real>
 				<key>Red Component</key>
-				<real>0.96537256240844727</real>
+				<real>0.98943418264389038</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.020208755508065224</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.54115492105484009</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.44977453351020813</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.099807053804397583</real>
+				<real>0.023484811186790466</real>
 				<key>Green Component</key>
-				<real>0.51805692911148071</real>
+				<real>0.46751424670219421</real>
 				<key>Red Component</key>
-				<real>0.98094809055328369</real>
+				<real>0.64746475219726562</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.78231418132781982</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.46265947818756104</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.12754884362220764</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.43516635894775391</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.10802463442087173</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.77738940715789795</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.52502274513244629</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.57082360982894897</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.14679534733295441</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.79781103134155273</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.89001238346099854</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.91611063480377197</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.29652142524719238</real>
+				<real>0.15170273184776306</real>
 				<key>Green Component</key>
-				<real>0.36959609389305115</real>
+				<real>0.11783610284328461</real>
 				<key>Red Component</key>
-				<real>0.3829454779624939</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.073530435562133789</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.21325300633907318</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.74176257848739624</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9566,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.15170273184776306</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.11783610284328461</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.0</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9589,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.56363654136657715</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.56485837697982788</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.50599193572998047</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9606,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92647796869277954</real>
+				<real>0.51685798168182373</real>
 				<key>Green Component</key>
-				<real>0.96674919128417969</real>
+				<real>0.50962930917739868</real>
 				<key>Red Component</key>
-				<real>0.96554505825042725</real>
+				<real>0.44058024883270264</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.19370138645172119</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.15575926005840302</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9640,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.51685798168182373</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.50962930917739868</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.44058024883270264</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10000,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.56363654136657715</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.56485837697982788</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.50599193572998047</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20521116256713867</real>
+				<real>0.19370138645172119</real>
 				<key>Green Component</key>
-				<real>0.20520767569541931</real>
+				<real>0.15575926005840302</real>
 				<key>Red Component</key>
-				<real>0.20521381497383118</real>
+				<real>0.0</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10937,7 +10943,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10955,7 +10961,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-03-26T13:21:08Z</date>
+	<date>2015-03-28T14:50:38Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
