--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9424,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45882353186607361</real>
+				<real>0.19607843458652496</real>
 				<key>Green Component</key>
-				<real>0.45882353186607361</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.45882353186607361</real>
+				<real>0.19607843458652496</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.32156863808631897</real>
 				<key>Green Component</key>
-				<real>0.364705890417099</real>
+				<real>0.32156863808631897</real>
 				<key>Red Component</key>
-				<real>0.50980395078659058</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.56805998086929321</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.59607845544815063</real>
+				<real>0.61667424440383911</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.61568629741668701</real>
+				<real>0.54509806632995605</real>
 				<key>Green Component</key>
-				<real>0.90588235855102539</real>
+				<real>0.89411765336990356</real>
 				<key>Red Component</key>
-				<real>0.98039215803146362</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81176471710205078</real>
+				<real>0.9686274528503418</real>
 				<key>Green Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.71764707565307617</real>
 				<key>Red Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.36862745881080627</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.63137257099151611</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.69803923368453979</real>
+				<real>0.61568629741668701</real>
 				<key>Red Component</key>
-				<real>0.83921569585800171</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87843137979507446</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.67843139171600342</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87843137979507446</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.87843137979507446</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.87843137979507446</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38431373238563538</real>
+				<real>0.45098039507865906</real>
 				<key>Green Component</key>
-				<real>0.54901963472366333</real>
+				<real>0.88235294818878174</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.49803921580314636</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>0.42745098471641541</real>
 				<key>Green Component</key>
-				<real>0.63137257099151611</real>
+				<real>0.7764706015586853</real>
 				<key>Red Component</key>
-				<real>0.67843139171600342</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.50980395078659058</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.48235294222831726</real>
+				<real>0.59936702251434326</real>
 				<key>Red Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.25196737051010132</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40392157435417175</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.5</real>
 				<key>Red Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.963817298412323</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.58039218187332153</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.58039218187332153</real>
+				<real>0.83921569585800171</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.7450980544090271</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.93333333730697632</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.32549020648002625</real>
 				<key>Red Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.32549020648002625</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.43921568989753723</real>
 				<key>Green Component</key>
-				<real>0.57647061347961426</real>
+				<real>0.43921568989753723</real>
 				<key>Red Component</key>
-				<real>0.81176471710205078</real>
+				<real>0.94117647409439087</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.19607843458652496</real>
 				<key>Green Component</key>
-				<real>0.20392157137393951</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.14117647707462311</real>
+				<real>0.19607843458652496</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9595,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56470590829849243</real>
+				<real>0.6629219651222229</real>
 				<key>Green Component</key>
-				<real>0.53333336114883423</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.39215686917304993</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9612,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.83921569585800171</real>
 				<key>Green Component</key>
-				<real>0.39215686917304993</real>
+				<real>0.83921569585800171</real>
 				<key>Red Component</key>
-				<real>0.34117648005485535</real>
+				<real>0.83921569585800171</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83137255907058716</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.90588235855102539</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.83137255907058716</real>
+				<real>1</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10006,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.074509806931018829</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.54509806632995605</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.61960786581039429</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.35686275362968445</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.35686275362968445</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.35686275362968445</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10898,7 +10898,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>456509375.10561103</real>
+	<real>458067779.110762</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10965,7 +10965,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-06-20T16:09:35Z</date>
+	<date>2015-07-08T17:02:59Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
