--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ set-option -g renumber-windows on
 set-option -g default-terminal "xterm"
 
 # ステータスバーの色を設定する
-set -g status-bg white
-set -g status-fg black
+set -g status-bg black
+set -g status-fg white
 
 # 非アクティブなウィンドウの色
 setw -g window-status-fg cyan
