--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9403,7 +9403,7 @@
 	<key>NSWindow Frame Preferences</key>
 	<string>314 226 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>896 621 384 129 0 0 1280 777 </string>
+	<string>448 499 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>132 60 610 712 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
@@ -9424,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32156863808631897</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.32156863808631897</real>
+				<real>0.15686275064945221</real>
 				<key>Red Component</key>
-				<real>0.82352942228317261</real>
+				<real>0.78431373834609985</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56805998086929321</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.54901963472366333</real>
 				<key>Red Component</key>
-				<real>0.61667424440383911</real>
+				<real>0.44313725829124451</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54509806632995605</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.89411765336990356</real>
+				<real>0.71764707565307617</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.91764706373214722</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9686274528503418</real>
+				<real>0.68235296010971069</real>
 				<key>Green Component</key>
-				<real>0.71764707565307617</real>
+				<real>0.44313725829124451</real>
 				<key>Red Component</key>
-				<real>0.36862745881080627</real>
+				<real>0.25882354378700256</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.65882354974746704</real>
 				<key>Green Component</key>
-				<real>0.61568629741668701</real>
+				<real>0.3490196168422699</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.5372549295425415</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.60000002384185791</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.54901963472366333</real>
 				<key>Red Component</key>
-				<real>0.49803921580314636</real>
+				<real>0.44313725829124451</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42745098471641541</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.7764706015586853</real>
+				<real>0.71764707565307617</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.91764706373214722</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.68235296010971069</real>
 				<key>Green Component</key>
-				<real>0.59936702251434326</real>
+				<real>0.44313725829124451</real>
 				<key>Red Component</key>
-				<real>0.25196737051010132</real>
+				<real>0.25882354378700256</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.65882354974746704</real>
 				<key>Green Component</key>
-				<real>0.5</real>
+				<real>0.3490196168422699</real>
 				<key>Red Component</key>
-				<real>0.963817298412323</real>
+				<real>0.5372549295425415</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.60000002384185791</real>
 				<key>Red Component</key>
-				<real>0.7450980544090271</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92549020051956177</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.93333333730697632</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.93333333730697632</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.15686275064945221</real>
 				<key>Red Component</key>
-				<real>0.94117647409439087</real>
+				<real>0.78431373834609985</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>1</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9595,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.6629219651222229</real>
+				<real>0.29803922772407532</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9608,29 +9608,29 @@
 			<key>Columns</key>
 			<integer>100</integer>
 			<key>Command</key>
-			<string>zsh</string>
+			<string></string>
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.29803922772407532</real>
 				<key>Green Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
 			<key>Custom Command</key>
-			<string>Yes</string>
+			<string>No</string>
 			<key>Custom Directory</key>
 			<string>Recycle</string>
 			<key>Default Bookmark</key>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.29803922772407532</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10006,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.29803922772407532</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.83921569585800171</real>
 				<key>Green Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.83921569585800171</real>
 				<key>Red Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.83921569585800171</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10898,7 +10898,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>458067779.110762</real>
+	<real>458156098.04767299</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10965,7 +10965,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-07-08T17:02:59Z</date>
+	<date>2015-07-09T18:04:05Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
